feat css completed

--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,70 @@
     padding: 0;
 }
 
-body{
-    background-color: #888888;
+/* bianco sopra sinistra */
+.container,
+.square,
+.smile{
+    border-top: solid 5px white;
+    border-left: solid 5px white;
+    border-bottom: solid 5px #7B7B7B;
+    border-right: solid 5px #7B7B7B;
 }
 
-main{
-    height: 100%;
-    width: 100%;
+
+/* grigio sopra sinistra */
+.box-timer,
+.box-game{
+    
+    border-top: solid 5px #7B7B7B;
+    border-left: solid 5px #7B7B7B;
+    border-bottom: solid 5px white;
+    border-right: solid 5px white;
+}
+
+body{
+    background-color: #888888;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.container{
+    width: 30%;
+    padding: 20px;
+    background-color: #BDBDBD;
+}
+.box-timer{
+    aspect-ratio: 3/1;
+    background-color: #BDBDBD;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.time-counter{
+    background-color: black;
+    height: 60%;
+    width: 30%;
+}
+
+.smile{
+    height: 60%;
+    background-color: #BDBDBD;
+    aspect-ratio: 1/1;
+}
+
+.box-game{
+    display: flex;
+    flex-wrap: wrap;
+    aspect-ratio: 1/1;
+}
+
+.square{
+    width: calc(1/10 * 100%);
+    aspect-ratio: 1/1;
+}
+.clicked{
+    border: 3px solid #7B7B7B;
 }
