--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ body{
 .square{
     width: calc(1/10 * 100%);
     aspect-ratio: 1/1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .clicked{
     border: 3px solid #7B7B7B;
