--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body{
     justify-content: space-around;
 }
 
-.time-counter{
+.b-box{
     background-color: black;
     height: 60%;
     width: 30%;
